--- a/mtg_blog/templates/mtg_blog_app/base.html
+++ b/mtg_blog/templates/mtg_blog_app/base.html
@@ -26,6 +26,7 @@
             <div>
                 <a href="{% url 'mtg_blog_app:home' %}">Home</a>
                 <a href="{% url 'mtg_blog_app:topic_list' %}">Topics</a>
+                <a href="{% url 'mtg_blog_app:contest' %}">Contest</a>
             </div>
         </nav>
         <div class="main-container">
